--- a/ITCLAB.ipynb
+++ b/ITCLAB.ipynb
@@ -15,51 +15,62 @@
       "source": [
         "import pandas as pd\n",
         "from google.colab import files\n",
+        "import matplotlib.pyplot as plt\n",
+        "from openpyxl import load_workbook\n",
+        "from openpyxl.drawing.image import Image\n",
         "\n",
-        "# Step 1: Upload the Excel file\n",
-        "print(\"Please upload your Excel file.\")\n",
+        "print(\"Upload your Excel file:\")\n",
         "uploaded = files.upload()\n",
+        "file_name = list(uploaded.keys())[0]\n",
         "\n",
-        "# Step 2: Extract the file name\n",
-        "file_name = list(uploaded.keys())[0]  # Get the uploaded file's name\n",
-        "\n",
-        "# Step 3: Load the data from the first sheet\n",
         "sheet_name = 'Sheet1'\n",
         "data = pd.read_excel(file_name, sheet_name=sheet_name)\n",
         "\n",
-        "# Display the original data (optional)\n",
-        "print(\"\\nOriginal Data:\")\n",
+        "print(\"Here's the data from your file:\")\n",
         "print(data.head())\n",
         "\n",
-        "# Step 4: Define a function to classify feedback\n",
         "def analyze_feedback(feedback):\n",
-        "    positive_keywords = [\"excellent\", \"great\", \"good\", \"amazing\", \"satisfied\", \"fast\", \"nice\"]\n",
-        "    negative_keywords = [\"bad\", \"poor\", \"disappointed\", \"unhappy\", \"terrible\", \"unsatisfied\", \"improve\"]\n",
-        "\n",
-        "    feedback = str(feedback).lower()  # Convert feedback to lowercase for matching\n",
-        "\n",
-        "    if any(word in feedback for word in positive_keywords):\n",
+        "    positive_words = [\"excellent\", \"great\", \"good\", \"amazing\", \"satisfied\", \"fast\", \"nice\"]\n",
+        "    negative_words = [\"bad\", \"poor\", \"disappointed\", \"unhappy\", \"terrible\", \"unsatisfied\", \"improve\"]\n",
+        "    feedback = str(feedback).lower()\n",
+        "    if any(word in feedback for word in positive_words):\n",
         "        return \"Positive\"\n",
-        "    elif any(word in feedback for word in negative_keywords):\n",
+        "    elif any(word in feedback for word in negative_words):\n",
         "        return \"Negative\"\n",
         "    else:\n",
         "        return \"Neutral\"\n",
         "\n",
-        "# Step 5: Apply the function to analyze 'Feedback' and fill 'Checking'\n",
         "data['Checking'] = data['Feedback'].apply(analyze_feedback)\n",
         "\n",
-        "# Display the updated data (optional)\n",
-        "print(\"\\nUpdated Data:\")\n",
+        "print(\"Here's the updated data with feedback types:\")\n",
         "print(data.head())\n",
         "\n",
-        "# Step 6: Save the modified data to a new Excel file\n",
+        "feedback_summary = data['Checking'].value_counts()\n",
+        "plt.figure(figsize=(8, 6))\n",
+        "feedback_summary.plot(kind='bar', color=['green', 'red', 'blue'], alpha=0.7)\n",
+        "plt.title(\"Feedback Analysis\")\n",
+        "plt.xlabel(\"Feedback Type\")\n",
+        "plt.ylabel(\"Count\")\n",
+        "plt.xticks(rotation=0)\n",
+        "plt.tight_layout()\n",
+        "\n",
+        "chart_file_name = 'Feedback_Analysis_Chart.png'\n",
+        "plt.savefig(chart_file_name)\n",
+        "plt.show()\n",
+        "\n",
         "updated_file_name = 'Updated_Excel_Project.xlsx'\n",
         "data.to_excel(updated_file_name, index=False)\n",
         "\n",
-        "# Step 7: Provide the updated file for download\n",
+        "wb = load_workbook(updated_file_name)\n",
+        "ws = wb.active\n",
+        "img = Image(chart_file_name)\n",
+        "img.anchor = 'G1'\n",
+        "ws.add_image(img)\n",
+        "wb.save(updated_file_name)\n",
+        "\n",
         "files.download(updated_file_name)\n",
         "\n",
-        "print(f\"\\nUpdated file saved as: {updated_file_name} and ready for download!\")"
+        "print(\"Your updated Excel file with the chart is ready for download!\")\n"
       ],
       "metadata": {
         "id": "90-TzOaLDlP3",
@@ -69,7 +80,7 @@
           "height": 394
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
